--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vconsole": "^3.14.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -36,8 +37,8 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "postcss-pxtorem": "^5.1.1",
     "node-sass": "^6.0.1",
+    "postcss-pxtorem": "^5.1.1",
     "sass-loader": "^10.0.1",
     "script-ext-html-webpack-plugin": "^2.1.4",
     "vue-template-compiler": "^2.6.11",
