--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vant": "^2.12.25",
     "vconsole": "^3.14.6",
     "vue": "^2.6.11",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "weixin-js-sdk": "^1.6.0"
